[gd_scene load_steps=5 format=3 uid="uid://xo55sqx1lwyd"]

[ext_resource type="Script" path="res://tiles/tile_manager.gd" id="1_6pc0r"]
[ext_resource type="TileSet" uid="uid://d0it2y0up4n6x" path="res://assets/tiles_sets/main_tile_set.tres" id="2_vhidk"]
[ext_resource type="Script" path="res://tiles/ground_layer.gd" id="3_1cqcs"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_jpqon"]
frequency = 0.04

[node name="TileManager" type="Node2D"]
script = ExtResource("1_6pc0r")

[node name="GroundLayer" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_set = ExtResource("2_vhidk")
script = ExtResource("3_1cqcs")
altitude_noise = SubResource("FastNoiseLite_jpqon")

[node name="TopLayer" type="TileMapLayer" parent="."]
unique_name_in_owner = true
z_index = 1
tile_set = ExtResource("2_vhidk")
